--- a/.npmignore
+++ b/.npmignore
@@ -1,8 +1,26 @@
+# Ignore node_modules
 node_modules
+
+# Ignore build and example directories
+build
 example
-src/*.test.js
-*.md
-*.log
-.gitignore
-.npmignore
-babel.config.js
+
+# Ignore test files
+*.test.js
+*.spec.js
+__tests__
+coverage
+
+# Ignore configuration files
+.babelrc
+.babel.config.js
+.eslintrc.js
+.prettierrc
+
+# Ignore logs and temp files
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+
+
